--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -8,17 +8,17 @@ const team = [
             'Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando el diseño técnico de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa.',
         full_description:
             ' Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando la ingeniería constructiva de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa. Como hito que marca el comienzo de una larga trayectoria de más de treinta años en el ámbito de la arquitectura teatral, se destaca el proyecto de remodelación, modernización y equipamiento, de la caja escénica del Teatro Colón de Buenos Aires, realizado en el año 1987, con Enrique Bordolini. Posteriormente trabajó en los proyectos del Teatro Argentino de La Plata, Provincia de Buenos Aires, desarrollado en el año 1999 y el anteproyecto de oferta licitatoria del Palau de les Arts, Reina Sofia en la Ciudad de las Artes y las Ciencias de Valencia, España. Su carrera dentro de esta especialidad siguió expandiéndose participando en proyectos a nivel internacional tales como, The Kimmel Center for the Performing Arts de Filadelfia, Estados Unidos; The Eastman Theater en Rochester de Nueva York; el Teatro Municipal de Santiago de Chile; el Teatro Municipal Ignacio Pane de Asunción, Paraguay entre otros. La temática abordada abarca además de la escenotecnia, la refuncionalización de edificios culturales históricos, tarea desarrollada en conjunto con especialistas de restauración arquitectónica. Dentro de este tópico produjo proyectos tales como el Teatro Martín Fierro de La Plata; el Centro Cultural Recoleta en la Ciudad Autónoma de Buenos Aires, El Centro Cultural Casa Lo Matta, en Vitacura, Chile y La Escuela de Ballet del Teatro Municipal de Santiago de Chile, entre otros. También abarcó su actividad como asesor escenotécnico la realización de nuevas salas para espectáculos y eventos de mediana y gran envergadura, tales como el Centro Cultural Gabriela Mistral, de Santiago de Chile; Teatro Bellas Artes de Bogotá; Arena de Santiago; Teatro del Lago en Frutillar, ambos en Chile, entre otros. Con Enrique Bordolini desarrollaron desde hace más de 30 años la dirección y producción técnica de grandes eventos al aire libre, para entidades tanto públicas como privadas.',
-        email: 'alfiosambataro@sambataroarquitectos.com',
+        email: 'alfio@sambataroarquitectos.com',
     },
     {
         name: 'Enrique Bordolini',
-        image: '/assets/enrique.avif',
+        image: '/assets/enrique.webp',
         job: 'Escenógrafo - Socio Fundador',
         mini_description:
-            'Escenógrafo, director General Escenotécnico del Teatro Colón de buenos Aires 1950-2024. e formó en el ISATC donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y fue Director de Producción Escénica',
+            'Escenógrafo(1950-2024), director General Escenotécnico del Teatro Colón de buenos Aires 1950-2024. e formó en el ISATC donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y fue Director de Producción Escénica',
         full_description:
             'Se formó en el ISATC donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y fue Director de Producción Escénica. Fue Director Técnico de los teatros Argentino de la Plata, Municipal de Santiago de Chile y Director Escenotécnico del Teatro Colón (1998). Realizó el diseño escenográfico de óperas como La Traviata, Le cantatrice villane, El barbero de Sevilla, El elixir del amor, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor, Fedora, Attila, Die Soldaten y Julio César en prestigiosos teatros de América, Europa y Medio Oriente. En 2016 asumió nuevamente la Dirección de Producción Escenotécnica del Argentino de La Plata. En 2019 asume nuevamente la Dirección General Escenotécnica del Teatro Colón de Buenos Aires.',
-        email: 'enriquebordolini@sambataroarquitectos.com',
+        email: '',
     },
     {
         name: 'Agostina Sambataro',
@@ -28,7 +28,7 @@ const team = [
             'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida por su destacada labor y desempeño académico, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente, orientándose hacia el ámbito de la educación y la cultura.',
         full_description:
             'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida con el “Diploma por su destacada labor y desempeño académico, reconocida por entidades públicas y privadas externas al ámbito de la Universidad”, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente orientándose hacia el ámbito educacional y cultural. Aun siendo estudiante - luego de su experiencia laboral en Estados Unidos y académica en Alemania y Nueva Zelanda - comenzó su carrera en arquitectura en Santiago de Chile en el estudio Amercanda junto al arquitecto Bernd Haller. Más adelante trabajó en el proyecto de edificio de viviendas BMC y Aula Magna de la Universidad de Quilmes en el estudio Faivre en Buenos Aires. Participó también en concursos de arquitectura tanto nacionales como internacionales, obteniendo el primer lugar en dos ocasiones, incluyendo el “Premio Clarín-SCA para estudiantes de arquitectura”. En el año 2015 se trasladó a la ciudad de Colonia, Alemania para formar parte del equipo de arquitectos del estudio v-architekten, en donde obtuvo el primer lugar como resultado del concurso para la Escuela técnica del ejército de la República Federal de Alemania en Karlsruhe, colaborando también en los proyectos de la Escuela primaria Berkersheim en Frankfurt y Centro Parroquial Langenfeld. De regreso en Buenos Aires se asoció al estudio Sambataro Arquitectos, en el cual se desempeña actualmente, especializándose en el ámbito de la arquitectura teatral y la escenotecnia. En dicho aspecto, ha trabajado para prestigiosas instituciones como el Centro Cultural Recoleta, Teatro Coliseo de la Fundación Cultural Coliseum, Teatro Argentino de La Plata, Teatro Colón, Teatro Tronador de Mar del Plata, Teatro Martín Fierro de La Plata, Teatro del Libertador General San Martin de Córdoba y Teatro Príncipe de Gales de Santiago de Chile, entre otros; desempeñándose tanto en la supervisión de obra como en el desarrollo de proyectos licitatorios y ejecutivos. Participó en cursos de especialización dictados por Graduate School of Design of the University of Harvard, Argentina Green Building Council y American Institute of Architects de Washington DC. Sus trabajos y artículos han sido publicados en revistas, canales televisivos y plataformas de arquitectura como Revista Summa, ARQ Clarín, Canal (á), D&D, Plataforma arquitectura y ArchDaily.',
-        email: 'agostinasambataro@sambataroarquitectos.com',
+        email: 'agostina@sambataroarquitectos.com',
     },
 ];
 
@@ -45,7 +45,7 @@ const team2 = [
     },
     {
         position: 'Iluminación escénica',
-        name1: 'Enrique Bordolini',
+        name1: 'José Luis Fiorruccio / Sandro Massironi',
         name2: '',
     },
     {
@@ -65,7 +65,17 @@ const team2 = [
     },
     {
         position: 'Sonido y video',
-        name1: 'Jorge Cárdena',
+        name1: 'Ing. Jorge Cárdena',
+        name2: '',
+    },
+    {
+        position: 'Imágenes 3D',
+        name1: 'Alfredo Santi',
+        name2: '',
+    },
+    {
+        position: 'Revit',
+        name1: 'Arq. Florencia Mares',
         name2: '',
     },
 ];
