--- a/src/components/about/TeamEng.astro
+++ b/src/components/about/TeamEng.astro
@@ -8,17 +8,17 @@ const team = [
             'Architect graduated from the University of Buenos Aires in 1981, has worked since his beginnings, to date, in the design of performance venues and carrying out the technical design of scenography for operas and ballet in important productions in theaters in America and Europe.',
         full_description:
             'Architect graduated from the University of Buenos Aires in 1981, has worked since his beginnings, to date, in the design of performance venues and carrying out the constructive engineering of scenography for operas and ballet in important productions in theaters in America and Europe. As a milestone that marks the beginning of a long career of more than thirty years in the field of theater architecture, the remodeling, modernization and equipment project of the stage house of the Teatro Colón in Buenos Aires, carried out in 1987 with Enrique Bordolini, stands out. He later worked on the projects of the Teatro Argentino de La Plata, Province of Buenos Aires, developed in 1999 and the preliminary draft of the tender offer of the Palau de les Arts, Reina Sofia in the City of Arts and Sciences of Valencia, Spain. His career within this specialty continued to expand, participating in international projects such as The Kimmel Center for the Performing Arts in Philadelphia, United States; The Eastman Theater in Rochester, New York; the Municipal Theater of Santiago de Chile; the Ignacio Pane Municipal Theater of Asunción, Paraguay, among others. The subject addressed covers, in addition to stage technology, the repurposing of historical cultural buildings, a task developed in conjunction with architectural restoration specialists. Within this topic, he produced projects such as the Teatro Martín Fierro de La Plata; the Recoleta Cultural Center in the Autonomous City of Buenos Aires, the Casa Lo Matta Cultural Center, in Vitacura, Chile and the Ballet School of the Municipal Theater of Santiago de Chile, among others. His activity as a stage technology consultant also included the creation of new venues for medium and large-scale shows and events, such as the Gabriela Mistral Cultural Center, in Santiago de Chile; Teatro Bellas Artes in Bogotá; Arena de Santiago; Teatro del Lago in Frutillar, both in Chile, among others. With Enrique Bordolini, they have been developing the technical direction and production of large outdoor events for public and private entities for more than 30 years.',
-        email: 'alfiosambataro@sambataroarquitectos.com',
+        email: 'alfio@sambataroarquitectos.com',
     },
     {
         name: 'Enrique Bordolini',
-        image: '/assets/enrique.avif',
-        job: 'Set Designer - Founding Partner',
+        image: '/assets/enrique.webp',
+        job: 'Scenographer - Founding Partner',
         mini_description:
-            'Set designer, General Stage Technology Director of the Teatro Colón de Buenos Aires 1950-2024. He trained at ISATC where he was responsible for the design of lighting systems (1979), directed the scenic modernization project (1989) and was Director of Scenic Production. He was Technical Director of the Argentino de la Plata and Municipal de Santiago de Chile theaters and Stage Technology Director of the Teatro Colón (1998).',
+            'Scenographer (1950-2024), General Stage Technical Director of the Teatro Colón in Buenos Aires (1950-2024). He trained at ISATC, where he was responsible for the lighting system design (1979), led the stage modernization project (1989), and was Director of Stage Production.',
         full_description:
-            'He trained at ISATC where he was responsible for the design of lighting systems (1979), directed the scenic modernization project (1989) and was Director of Scenic Production. He was Technical Director of the Argentino de la Plata and Municipal de Santiago de Chile theaters and Stage Technology Director of the Teatro Colón (1998). He created the scenographic design of operas such as La Traviata, Le cantatrice villane, The Barber of Seville, The Elixir of Love, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor, Fedora, Attila, Die Soldaten and Julius Caesar in prestigious theaters in America, Europe and the Middle East. In 2016 he once again assumed the Direction of Scenic Production Technology of the Argentino de La Plata. In 2019 he once again assumes the General Direction of Scenic Technology of the Teatro Colón in Buenos Aires.',
-        email: 'enriquebordolini@sambataroarquitectos.com',
+            'He trained at ISATC, where he was responsible for the lighting system design (1979), led the stage modernization project (1989), and was Director of Stage Production. He was Technical Director of the Argentino de La Plata Theater, the Municipal Theater of Santiago de Chile, and Stage Technical Director of Teatro Colón (1998). He designed the scenography for operas such as La Traviata, Le cantatrici villane, The Barber of Seville, The Elixir of Love, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La Bohème, Lucia di Lammermoor, Fedora, Attila, Die Soldaten, and Julius Caesar in prestigious theaters across America, Europe, and the Middle East. In 2016, he once again took on the role of Director of Stage Production at the Argentino de La Plata Theater. In 2019, he resumed the position of General Stage Technical Director of Teatro Colón in Buenos Aires.',
+        email: '',
     },
     {
         name: 'Agostina Sambataro',
@@ -28,7 +28,7 @@ const team = [
             'Since graduating from the University of Buenos Aires in 2013, in which she was distinguished for her outstanding work and academic performance, she has accumulated experience in various areas of architecture, both nationally and internationally, focusing on the field of education and culture.',
         full_description:
             'Since graduating from the University of Buenos Aires in 2013, in which she was distinguished with the "Diploma for her outstanding work and academic performance, recognized by public and private entities outside the University," she has accumulated experience in various areas of architecture, both nationally and internationally, focusing on the educational and cultural field. Even as a student - after her work experience in the United States and academic experience in Germany and New Zealand - she began her career in architecture in Santiago de Chile at the Amercanda studio with architect Bernd Haller. Later she worked on the BMC housing building project and Aula Magna of the University of Quilmes at the Faivre studio in Buenos Aires. She also participated in national and international architecture competitions, obtaining first place on two occasions, including the "Clarín-SCA Award for architecture students." In 2015 she moved to the city of Cologne, Germany to join the team of architects at the v-architekten studio, where she obtained first place as a result of the competition for the technical school of the army of the Federal Republic of Germany in Karlsruhe, also collaborating on the projects of the Berkersheim primary school in Frankfurt and the Langenfeld Parish Center. Back in Buenos Aires, she joined the Sambataro Arquitectos studio, where she currently works, specializing in the field of theater architecture and stage technology. In this regard, she has worked for prestigious institutions such as the Recoleta Cultural Center, Coliseo Theater of the Coliseum Cultural Foundation, Argentino de La Plata Theater, Colón Theater, Tronador Theater of Mar del Plata, Martín Fierro Theater of La Plata, Libertador General San Martin Theater of Córdoba and Príncipe de Gales Theater of Santiago de Chile, among others; working both in the supervision of work and in the development of bidding and executive projects. She participated in specialization courses taught by the Graduate School of Design of the University of Harvard, Argentina Green Building Council and American Institute of Architects of Washington DC. Her works and articles have been published in magazines, television channels and architecture platforms such as Summa Magazine, ARQ Clarín, Canal (á), D&D, Plataforma arquitectura and ArchDaily.',
-        email: 'agostinasambataro@sambataroarquitectos.com',
+        email: 'agostina@sambataroarquitectos.com',
     },
 ];
 
@@ -45,7 +45,7 @@ const team2 = [
     },
     {
         position: 'Stage Lighting',
-        name1: 'Enrique Bordolini',
+        name1: 'José Luis Fiorruccio / Sandro Massironi',
         name2: '',
     },
     {
@@ -65,7 +65,17 @@ const team2 = [
     },
     {
         position: 'Sound and Video',
-        name1: 'Jorge Cárdena',
+        name1: 'Engineer Jorge Cárdena',
+        name2: '',
+    },
+    {
+        position: '3D Images',
+        name1: 'Alfredo Santi',
+        name2: '',
+    },
+    {
+        position: 'Revit',
+        name1: 'Arch. Florencia Mares',
         name2: '',
     },
 ];
