--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,10 +5,12 @@ import Values from '../components/about/Values.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/layout/Header.astro';
 import Footer from '../components/layout/Footer.astro';
+import Heading from '../components/about/Heading.astro';
 ---
 
 <Layout description="" title="Nosotros">
     <Header id="top" />
+    <Heading title="Estudio" subtitle="Conocé más sobre nosotros" />
     <Mission
         title="Estudio"
         paragraph1="Nuestro equipo incluye expertos en el desarrollo de planificación, patrimonio, arquitectura teatral, escenotecnia y diseño de escenografías para ópera. Además, contamos con especialistas en ingeniería escénica, estructural y mecánica; acústica, iluminación escénica, sonido y video. Tenemos experiencia en operación de teatros, por lo tanto, entendemos las necesidades artísticas, operacionales, técnicas y comerciales de todo tipo de salas de espectáculos, áreas de apoyo y edificios complementarios."
