--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -5,10 +5,12 @@ import Layout from '../../layouts/Layout.astro';
 import Header from '../../components/layout/Header.astro';
 import Footer from '../../components/layout/Footer.astro';
 import ValuesEng from '../../components/about/ValuesEng.astro';
+import Heading from '../../components/about/Heading.astro';
 ---
 
 <Layout description="" title="About Us">
     <Header id="top" />
+    <Heading title="Studio" subtitle="Know more about us" />
     <Mission
         title="Studio"
         paragraph1="Our team includes experts in development planning, heritage, theater architecture, stagecraft, and set design for opera. In addition, we have specialists in scenic, structural, and mechanical engineering; acoustics, stage lighting, sound, and video. We have experience in theater operation, therefore, we understand the artistic, operational, technical, and commercial needs of all types of performance venues, support areas, and complementary buildings."
