--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,9 @@ import IndexPublicationsComponent from '../components/IndexPublicationsComponent
 
 const texts = [
     {
-        page: 'Sambataro Arquitectos es un estudio de arquitectura con más de 20 años de experiencia en el mercado. Nos especializamos en proyectos de viviendas unifamiliares, multifamiliares, comerciales y de oficinas. Nuestro objetivo es crear espacios que se adapten a las necesidades de nuestros clientes y que reflejen su personalidad.',
+        page: 'Sambataro Arquitectos es un estudio de arquitectura con más de 40 años de experiencia en el mercado. Nos especializamos en proyectos de viviendas unifamiliares, multifamiliares, comerciales y de oficinas. Nuestro objetivo es crear espacios que se adapten a las necesidades de nuestros clientes y que reflejen su personalidad.',
         title: 'Sambataro Arquitectos',
-        description:
-            'El castellano es una lengua romance del grupo ibérico. Es uno de los seis idiomas oficiales de la ONU y el segundo idioma más hablado del mundo.',
+        description: '',
     },
 ];
 ---
