Agregar nuevas imágenes del proyecto Tronador, actualizar información de contacto y mejorar la presentación de los componentes en la interfaz.

--- a/src/components/home/Cta.astro
+++ b/src/components/home/Cta.astro
@@ -1,4 +1,10 @@
 ---
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+import HeaderLink from '../HeaderLink.astro';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+
 interface CtaProps {
     title: string;
     description: string;
@@ -21,11 +27,12 @@ const { title, description, anchor } = Astro.props as CtaProps;
                     {description}
                 </p>
             </div>
-            <a
+            <HeaderLink
                 href="/contact"
-                class="dark:hover-bg-primary-700 flex w-full items-center justify-center rounded-xl bg-primary-100 px-6 py-4 text-sm font-normal text-primary-700 shadow transition-all hover:text-primary-800 hover:shadow-md focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-1 focus-visible:outline-primary-500 active:scale-95 dark:border-primary-700 dark:bg-primary-800 dark:text-primary-200 dark:hover:bg-primary-700 dark:hover:text-primary-100 dark:focus-visible:outline-primary-400 max-w-sm">
+                locale={lang}
+                class="dark:hover-bg-primary-700 flex w-full max-w-sm items-center justify-center rounded-xl bg-primary-100 px-6 py-4 text-sm font-normal text-primary-700 shadow transition-all hover:text-primary-800 hover:shadow-md focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-1 focus-visible:outline-primary-500 active:scale-95 dark:border-primary-700 dark:bg-primary-800 dark:text-primary-200 dark:hover:bg-primary-700 dark:hover:text-primary-100 dark:focus-visible:outline-primary-400">
                 {anchor}
-            </a>
+            </HeaderLink>
         </div>
     </div>
 </section>
