--- a/src/pages/projects/theaters/teatro-tronador.astro
+++ b/src/pages/projects/theaters/teatro-tronador.astro
@@ -4,11 +4,11 @@ import tronador from '../../../img/projects/tronador.webp';
 import Base from '../../../layouts/Base.astro';
 import Layout from '../../../layouts/Layout.astro';
 
-import tronador1 from '../../../img/projects/tronador/tronador1.webp';
-import tronador2 from '../../../img/projects/tronador/tronador2.webp';
-import tronador3 from '../../../img/projects/tronador/tronador3.webp';
-import tronador4 from '../../../img/projects/tronador/tronador4.webp';
-import tronador5 from '../../../img/projects/tronador/tronador5.webp';
+import tronador1 from '../../../img/projects/tronador/tronador1.jpg';
+import tronador2 from '../../../img/projects/tronador/tronador2.jpg';
+import tronador3 from '../../../img/projects/tronador/tronador3.jpg';
+import tronador4 from '../../../img/projects/tronador/tronador4.jpg';
+import tronador5 from '../../../img/projects/tronador/tronador5.jpg';
 import tronador6 from '../../../img/projects/tronador/tronador6.webp';
 import tronador7 from '../../../img/projects/tronador/tronador7.webp';
 import tronador8 from '../../../img/projects/tronador/tronador8.webp';
@@ -25,6 +25,8 @@ import tronador18 from '../../../img/projects/tronador/tronador18.webp';
 import tronador19 from '../../../img/projects/tronador/tronador19.webp';
 import tronador20 from '../../../img/projects/tronador/tronador20.webp';
 import tronador21 from '../../../img/projects/tronador/tronador21.webp';
+import tronador22 from '../../../img/projects/tronador/tronador22.webp';
+import tronador23 from '../../../img/projects/tronador/tronador23.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
@@ -62,123 +64,135 @@ const images = [
     {
         largeURL: tronador2.src,
         thumbnailURL: tronador2.src,
-        width: 1428,
+        width: 989,
         height: 660,
     },
     {
         largeURL: tronador3.src,
         thumbnailURL: tronador3.src,
-        width: 1430,
+        width: 989,
         height: 660,
     },
     {
         largeURL: tronador4.src,
         thumbnailURL: tronador4.src,
-        width: 933,
+        width: 989,
         height: 660,
     },
-      {
-         largeURL: tronador5.src,
-         thumbnailURL: tronador5.src,
-         width: 832,
-         height: 660,
-      },
-      {
-         largeURL: tronador6.src,
-         thumbnailURL: tronador6.src,
-         width: 828,
-         height: 660,
-      },
-      {
-         largeURL: tronador7.src,
-         thumbnailURL: tronador7.src,
-         width: 844,
-         height: 660,
-      },
-      {
-         largeURL: tronador8.src,
-         thumbnailURL: tronador8.src,
-         width: 894,
-         height: 660,
-      },
-      {
-         largeURL: tronador9.src,
-         thumbnailURL: tronador9.src,
-         width: 834,
-         height: 660,
-      },
-      {
-         largeURL: tronador10.src,
-         thumbnailURL: tronador10.src,
-         width: 778,
-         height: 660,
-      },
-      {
-         largeURL: tronador11.src,
-         thumbnailURL: tronador11.src,
-         width: 1028,
-         height: 744,
-      },
-      {
-         largeURL: tronador12.src,
-         thumbnailURL: tronador12.src,
-         width: 1013,
-         height: 660,
-      },
-      {
-         largeURL: tronador13.src,
-         thumbnailURL: tronador13.src,
-         width: 879,
-         height: 660,
-      },
-      {
-         largeURL: tronador14.src,
-         thumbnailURL: tronador14.src,
-         width: 847,
-         height: 660,
-      },
-      {
-         largeURL: tronador15.src,
-         thumbnailURL: tronador15.src,
-         width: 1011,
-         height: 660,
-      },
-      {
-         largeURL: tronador16.src,
-         thumbnailURL: tronador16.src,
-         width: 991,
-         height: 660,
-      },
-      {
-         largeURL: tronador17.src,
-         thumbnailURL: tronador17.src,
-         width: 848,
-         height: 660,
-      },
-      {
-         largeURL: tronador18.src,
-         thumbnailURL: tronador18.src,
-         width: 632,
-         height: 660,
-      },
-      {
-         largeURL: tronador19.src,
-         thumbnailURL: tronador19.src,
-         width: 854,
-         height: 660,
-      },
-      {
-         largeURL: tronador20.src,
-         thumbnailURL: tronador20.src,
-         width: 852,
-         height: 660,
-      },
-      {
-         largeURL: tronador21.src,
-         thumbnailURL: tronador21.src,
-         width: 845,
-         height: 660,
-      },
+    {
+        largeURL: tronador5.src,
+        thumbnailURL: tronador5.src,
+        width: 989,
+        height: 660,
+    },
+    {
+        largeURL: tronador6.src,
+        thumbnailURL: tronador6.src,
+        width: 828,
+        height: 660,
+    },
+    {
+        largeURL: tronador7.src,
+        thumbnailURL: tronador7.src,
+        width: 844,
+        height: 660,
+    },
+    {
+        largeURL: tronador8.src,
+        thumbnailURL: tronador8.src,
+        width: 894,
+        height: 660,
+    },
+    {
+        largeURL: tronador9.src,
+        thumbnailURL: tronador9.src,
+        width: 834,
+        height: 660,
+    },
+    {
+        largeURL: tronador10.src,
+        thumbnailURL: tronador10.src,
+        width: 778,
+        height: 660,
+    },
+    {
+        largeURL: tronador11.src,
+        thumbnailURL: tronador11.src,
+        width: 1028,
+        height: 744,
+    },
+    {
+        largeURL: tronador12.src,
+        thumbnailURL: tronador12.src,
+        width: 1013,
+        height: 660,
+    },
+    {
+        largeURL: tronador13.src,
+        thumbnailURL: tronador13.src,
+        width: 879,
+        height: 660,
+    },
+    {
+        largeURL: tronador14.src,
+        thumbnailURL: tronador14.src,
+        width: 847,
+        height: 660,
+    },
+    {
+        largeURL: tronador15.src,
+        thumbnailURL: tronador15.src,
+        width: 1011,
+        height: 660,
+    },
+    {
+        largeURL: tronador16.src,
+        thumbnailURL: tronador16.src,
+        width: 991,
+        height: 660,
+    },
+    {
+        largeURL: tronador17.src,
+        thumbnailURL: tronador17.src,
+        width: 848,
+        height: 660,
+    },
+    {
+        largeURL: tronador18.src,
+        thumbnailURL: tronador18.src,
+        width: 632,
+        height: 660,
+    },
+    {
+        largeURL: tronador19.src,
+        thumbnailURL: tronador19.src,
+        width: 854,
+        height: 660,
+    },
+    {
+        largeURL: tronador20.src,
+        thumbnailURL: tronador20.src,
+        width: 852,
+        height: 660,
+    },
+    {
+        largeURL: tronador21.src,
+        thumbnailURL: tronador21.src,
+        width: 845,
+        height: 660,
+    },
+    {
+        largeURL: tronador22.src,
+        thumbnailURL: tronador22.src,
+        width: 1011,
+        height: 660,
+    },
+    {
+        largeURL: tronador23.src,
+        thumbnailURL: tronador23.src,
+        width: 1011,
+        height: 660,
+    },
 ];
 ---
 
