--- a/src/pages/service.astro
+++ b/src/pages/service.astro
@@ -71,6 +71,7 @@ const contenido = [
         descripcion:
             'Brindamos consultoría especializada en diseño y planificación de espacios escénicos, asegurando eficiencia y funcionalidad.',
         items: [
+            'Maquinaria escénica mantenimiento preventivo y correctivo',
             'Diseño de escenarios',
             'Optimización acústica',
             'Planificación de sistemas de iluminación',
@@ -108,14 +109,15 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-20 lg:max-w-7xl lg:px-8">
             <div class="mb-12 grid gap-16 lg:grid-cols-2 lg:gap-12">
                 <Image
-                    class="mx-auto h-full w-full max-w-xl rounded-3xl object-cover"
+                    class="mx-auto h-full w-full max-w-xl rounded-xl object-cover"
                     src={orquesta}
                     alt="Our experts working together"
                 />
                 <div class="flex flex-col gap-10">
                     <!-- Mission description -->
-                    <div class="space-y-8 pb-12 sm:space-y-12">
-                        <div class="space-y-6">
+                    <div class="space-y-8  sm:space-y-12">
+                        <div
+                            class="space-y-6 rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12 ">
                             <p
                                 class="text-base text-primary-950/70 dark:text-primary-200/70 sm:text-lg">
                                 Prestamos servicios integrales de asesoría escenotécnica respecto a
